<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PeerConnectionTestActivity!</string>
    <string name="app_name">PeerConnectionTest</string>
    <string name="connect_as_text">Connect as: </string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="call_peer_id_text">Call peer id: </string>
    <string name="call_button_text">Call</string>
    <string name="hangup_button_text">Hang up</string>
    
</resources>